# PP

Final/: MPI.cpp  OpenMP.cpp
P1/: CMakeLists.txt  TimeIt.cpp  a.txt  b.txt  timeit
P1/src/: MPITimeIt.cpp  mpitimeit
P1/tests/: test.cpp
P2/: cpu_info  cpu_info.cpp  cpu_performance.py  word_size  word_size.cpp
P3/: HardwarePlatformCharacterizationVM.py  roofline.eps
P4/: stencil_dense  stencil_dense.cpp  stencil_sparse_row_mask  stencil_sparse_row_mask.cpp
P5/: hash.cpp  parallel  parallel.cpp  serial  serial.cpp
P6/: roofline.ps
P6/Stencil/: CollapseOpenACC.cpp  OpenMP.cpp  TileOpenACC.cpp
P6/minibench/: PCI_Bandwidth_Benchmark.cpp  h2d_bandwidth_pageable.csv  h2d_bandwidth_pinned.csv  hash.hpp  pcie_bandwidth
